# WSIRegPipeline

./: check_registered_cases.py  eval_exp_01.json  eval_exp_02.json  eval_loftr.json  main_ex0.py  main_ex1.py  main_ex2.py  parse_to_mha.py  paths.py  prepare_datasets_masks.py  prepare_submission.py  preprocessing.py  register_deformable.py  utils.py
experiments/: deformable.ipynb  deformable_valis.ipynb  register_manual_exp.ipynb  visualization.ipynb  visualization_masks.ipynb
networks/: deformable.py
networks/feature_matching/data/scannet/: index  test  train
requirements/affine/: environment.yaml  pyproject.toml  virtual-packages.yaml
requirements/tiatoolbox/: environment.yaml  pyproject.toml  requirements.txt
requirements/valis/: environment.yaml  pyproject.toml
