[tool.poetry]
name = "imgreg"
version = "0.1.0"
description = ""
authors = ["ivanvmoreno <contacto@ivanmoreno.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
albumentations = "^1.3.0"
Click = "^8.1.3"
defusedxml = "^0.7.1"
filelock = "^3.9.0"
flask = "^2.2.2"
glymur = "^0.12.1"
imagecodecs = "^2022.9.26"
joblib = "^1.1.1"
jupyterlab = "^3.5.2"
matplotlib = "^3.6.2"
numba = "^0.57.0"
numpy = "^1.23.5"
opencv-python = "^4.6.0"
openslide-python = "^1.2.0"
pandas = "^2.0.0"
pillow = "^9.3.0"
pydicom = "^2.3.1"
pyyaml = "^6.0"
requests = "^2.28.1"
scikit-image = "^0.20"
scikit-learn = "^1.2.0"
scipy = "^1.8"
shapely = "^2.0.0"
SimpleITK = "^2.2.1"
sphinx = "^5.3.0"
tifffile = "^2022.10.10"
tqdm = "^4.64.1"
umap-learn = "^0.5.3"
wsidicom = "^0.7.0"
zarr = "^2.13.3"
tiatoolbox = "^1.4.1"
torch = "2.0.0"
torchvision = { version = "0.15.1+cu118", source = "pytorch-cu118" }

[[tool.poetry.source]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118/"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
