[tool.poetry]
name = "valis"
version = "0.1.0"
description = ""
authors = ["ivanvmoreno <contacto@ivanmoreno.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.11"
valis-wsi = "^1.0.0rc15"
pyvips = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
